# rekordbox-file-cleanup

./: .gitignore  README.md  file-cleanup.py  pyproject.toml  rekordboxmeta.xml
tests/: test_integration.py
